# decoy-engine

./: .aiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARKING_GUIDE.md  CAPABILITIES_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT_MAP.md  CODEMAP.md  CONNECTOR_SDK_CONTRACT.md  CONNECTOR_SDK_GUIDE.md  CONTRIBUTING.md  CUsersckeepermanAppDataLocalTempengine_tree.txt  DECOY_RENAME.md  DISGUISES.md  DISGUISES_GUIDE.md  NOTICE  PIPELINE_GRAPH_GUIDE.md  PLAN.md  POLARS_FOR_PANDAS_USERS.md  README.md  SECURITY.md  SHARED_ENGINE_ARCHITECTURE.md  STORM_FORECAST_GUIDE.md  STORM_FORECAST_REPORT.md  TRADEMARKS.md  dev-help.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: tour-decay.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  engine-v2-parity.yml  engine-v2-substrate-matrix.yml  golden.yml  release.yml
.tours/: 1-onboarding.tour  2-hardest-flow.tour
custom_providers/: README.md
dennis-artifacts/: README.md
docs/: .gitignore  Makefile  architecture.md  capability-matrix.md  ci-regression-gate.md  cli.md  conf.py  determinism.md  index.md  make.bat  methodology-registry.yaml  mimesis-adoption-2026-06-12.md  product-flow.md  quickstart.md  recipes.md  relationships.md  strategies.md  v2-app-audit-findings.md  what-we-cannot-prove.md
docs/adr/: 0001-polars-duckdb-hybrid-engine-substrate.md  0002-two-key-resolvers-in-execution-context.md  template.md
docs/audit/: legacy-feature-coverage.md  qa-review-2026-05-29.md  qa-review-2026-06-02-engine.md  qa-review-2026-06-02-generators-profile-context.md  qa-review-2026-06-03-providers-sdk-discovery.md  qa-review-2026-06-03-quality-generation-plan.md  qa-review-engine-broad-2026-05-30.md  qa-review-engine-s14-s17-2026-05-30.md  qa-review-engine-storm-synth-2026-05-30.md
docs/findings/: qa-review-2026-06-03-context-transforms-dsc.md
docs/qa/: 2026-06-03-engine-review.md  2026-06-04-engine-qa-review.md  2026-06-04-expressions-formula-textredact.md  2026-06-04-storm-quality-generators.md  2026-06-06-connectors-relationships.md  QA-engine-2026-06-06.md  qa-report-2026-06-06.md  qa-review-engine-20260603.md  review-2026-06-02-determinism.md  review-2026-06-02-execution.md  review-2026-06-02-fc1-mixed-mode-engine.md  review-2026-06-02-providers-config-storm.md  review-2026-06-02-transforms-connectors-relationships.md  review-2026-06-03-internal-validation-walks-disguises.md  review-2026-06-03-strategies-instrumentation.md  review-2026-06-03-when-gate-pipeline-postmask.md  review-2026-06-04-disguises-profile-timing.md  review-2026-06-04-hash-dateshift-categorical-sampler.md  review-2026-06-04-pandas-fpe-compile.md  review-2026-06-04-polars-relationships.md  review-2026-06-04-synthesize-determinism-connectors.md  review-2026-06-05-composite-pool-postmask.md  review-2026-06-05-config-context-data-discovery.md  review-2026-06-05-post-validation-identifiers-logging.md  review-2026-06-05-profile-sdk-validation.md  review-2026-06-05-quality-discovery.md  review-2026-06-06-determinism-expressions-discovery-fidelity.md  review-2026-06-06-nested-shuffle-bucketize-derive.md  review-2026-06-06-pandas-adapter-postval.md  review-2026-06-06-synthesize-generation.md
docs/security/: key-derivation.md  sql-surfaces.md  token-vault.md
plans/: 2026-05-05-graph-package.md  2026-05-06-ml-detection-phase-0-fixtures-and-harness.md  2026-05-06-ml-detection-phase-1-column-classifier.md  2026-05-06-ml-detection-phase-2-ner-free-text.md  2026-05-06-ml-detection-phase-5-domain-fine-tune.md  2026-05-09-hybrid-engine-bug-followup.md  2026-05-10-engine-substrate-execution.md  2026-05-10-hybrid-engine-dogfood-review.md  2026-05-10-polars-duckdb-hybrid-engine.md  2026-05-10-polars-duckdb-implementation.md  2026-05-12-living-documentation.md  2026-05-13-column-role-taxonomy-engine.md  2026-05-13-disclosure-class-on-transforms.md  2026-05-13-equivalence-class-and-k-anonymity-engine.md  2026-05-13-nist-ff1-fpe.md  2026-05-13-quality-and-diagnostic-reports-engine.md  2026-05-13-subject-keyed-date-shift.md  2026-05-13-synthetic-data-privacy-metrics.md
qa/: review-2026-06-05-plan-config-serialize.md  review-2026-06-05-providers-validation-walks-internals.md
scripts/: build_golden_fixtures.py  compare_baselines.py  gen_capability_matrix.py  gen_perf_fixtures.py  gen_proof_manifest.py  reevaluate_mimesis.py  run_engine_v2_baseline.py  run_perf_baseline.py
src/decoy_engine/: _MAP.md  __init__.py  context.py  data_discovery.py  errors.py  exceptions.py  expressions.py  providers.py  sdk.py  unmask.py  validation.py  validation_result.py  vault.py
src/forge_engine/: __init__.py  context.py  exceptions.py  validation.py
tests/: conftest.py
tests/benchmark/: test_arrow_to_pandas_conversion.py  test_storm_arrow_boundary.py
tests/connectors/: sdk_contract_tests.py  test_community_connector_example.py  test_gcs.py  test_s3.py  test_sftp.py  test_sftp_stale_session.py
tests/fixtures/: sample.csv  smoke_mask.yaml
tests/integration/: test_cloud_graph_ops.py  test_composite_mg4_e2e.py  test_fk_extended.py  test_fk_failure_paths.py  test_fk_preservation_matrix.py  test_forecast_hipaa_golden.py  test_generator.py  test_graph.py  test_graph_hybrid_engine.py  test_graph_node_exports.py  test_masker.py  test_mg1_smoke.py  test_nested_e2e.py  test_preview_engine_identity.py  test_qa1_engine_column_rng.py  test_sprint_g_ops.py  test_storm_custom_detectors.py  test_storm_distribution_and_trail.py  test_storm_profiler.py  test_text_redact_e2e.py  test_walks_drift.py  test_walks_hazards.py  test_walks_inference.py  test_when_e2e.py  test_when_plus_nested.py
tests/parity/: SEMANTIC_DIFFERENCES.md  test_chunked_substrate_parity.py  test_composite_substrate_parity.py  test_edge_case_parity.py  test_relational_ops_parity.py  test_source_sink_parity.py  test_strategy_substrate_parity.py
tests/perf/: __init__.py  test_throughput_budgets.py
tests/perf_fixtures/: .gitignore  README.md  __init__.py  engine-v2-baseline.json  loaders.py  pandas-baseline-pre-rewrite.json  schema.py  (+6 more)
(+729 files in other folders)
