[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "decoy-engine"
version = "0.1.0"
description = "Shared data masking and synthetic generation engine for the Decoy product family"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "louiskeep" }]
dependencies = [
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "faker>=13.0.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    # Used by decoy_engine.disguises.schema for the Disguise model.
    # Was always required at runtime; was undeclared until benchmark CI
    # caught the gap on a fresh-environment install.
    "pydantic>=2.0",
    # Promoted from optional `[hybrid]` extras (Bug 1).
    # Phase 8 flipped `engine: hybrid` to the default, so a pandas-only
    # install would crash on first pipeline run with ModuleNotFoundError.
    # Both libs are now required to match the runtime contract.
    "polars>=1.0",
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # moto is used by S3 connector contract tests (Week 2 of Sprint G).
    # Pinned here so a fresh `pip install -e .[dev]` brings it along
    # rather than failing on the first import in test collection.
    "moto[s3]>=5.0",
]
# Sphinx + sphinx-autoapi build the API reference site published to
# GitHub Pages. Build from the repo root via `pip install -e .[docs]`
# then `make -C docs html`. CI lives at `.github/workflows/docs.yml`.
# Item 50 Phase E in the cross-repo plan.
docs = [
    "sphinx>=7,<9",
    "sphinx-autoapi>=3,<4",
    "furo>=2024.1",
    "myst-parser>=2,<5",
    "sphinx-copybutton>=0.5",
    "linkify-it-py>=2",
    # Renders ```mermaid fenced blocks in docs/architecture.md. Without this
    # Pygments treats `mermaid` as an unknown lexer and -W fails the build.
    "sphinxcontrib-mermaid>=0.9",
]
# First-party cloud-storage connectors as optional extras. S3 is covered
# by `boto3`, which is already a transitive dep via `moto[s3]` in `[dev]`
# and via the platform's runtime requirements. GCS and SFTP have heavier
# dependency footprints (google-cloud-storage pulls grpcio; paramiko
# pulls cryptography) so they stay opt-in for installs that don't need
# them, e.g. an S3-only customer.
gcs = ["google-cloud-storage>=2.0"]
sftp = ["paramiko>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/decoy_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: informational performance benchmarks; not a regression gate",
    "perf: PERF.BASE.2/3 fixture + baseline tests; opt-in via -m perf",
    "golden: engine-v2 S1 golden fixture suite (CSVs + manifests under tests/fixtures/golden/); CI gates engine-v2 sprint work on these",
]

# ── Tooling baseline (V2.0-prep, sprint 1) ──────────────────────────────────
# Lint + type-check + format gate land before any structural V2 refactor so
# decomposition PRs run against the gate from day 1. Mypy starts at
# check_untyped_defs and escalates per-subpackage as touched (resolved
# question #2). See docs/v2-app-audit-findings.md F-AUDIT for related items.

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [".pytest_cache", "__pycache__", "logs", "mappings", "docs/_build"]

[tool.ruff.lint]
# Pragmatic selection. E501 (line length) is owned by ruff format so it
# stays out. S-rule false-positives in tests are handled via per-file
# ignores below. UP rules drive the gradual move to PEP 585 / 604.
select = ["E", "F", "I", "B", "SIM", "UP", "N", "PT", "S", "RUF"]
ignore = [
    "E501",   # line-too-long: handled by ruff format
    "S311",   # non-crypto random: legit in Faker seeding and generators
    "S608",   # hardcoded SQL: source.db ops build SQL on purpose; documented power-user surface
    "S110",   # try-except-pass: telemetry paths intentionally swallow
    "S112",   # try-except-continue: telemetry paths intentionally swallow
    "N806",   # non-lowercase var: math notation in stats/crypto modules
    "N803",   # non-lowercase arg: same reason
    "SIM105", # contextlib.suppress: marginal readability win; not worth churn
    "SIM102", # nested-if-collapse: sometimes clearer split
    "SIM108", # ternary-instead-of-if: ternaries are often less readable
    "E731",   # lambda assignment: occasional in callback wiring
    "B904",   # raise-without-from: cosmetic; high-volume; cleanup as touched
    "RUF012", # mutable-class-default: false positives on dataclass-like defaults
    # RUF002 / RUF003 (ambiguous unicode in docstrings / comments) are NOT
    # globally ignored: the no-em-dash repo rule extends to en-dash + smart
    # quotes, and the lint catches drift before it lands. The two intentional
    # math-notation callsites (× in fpe.py docstring + a test comment) carry
    # narrow per-file ignores below.
    "RUF013", # implicit-Optional: cleanup as touched; high-volume
]
[tool.ruff.lint.per-file-ignores]
# Tests can use assert (S101) and have lower naming bars. Additional
# test-only suppressions cover cosmetic pytest-style nits (PT018
# assertion-too-complex, PT006 parametrize tuple-vs-list, PT012/PT019
# fixture/raises body shape) and patterns legitimate in tests but
# loud under the broader src ratchet (S108 /tmp paths, SLF001 private
# member access in white-box tests).
"tests/**" = [
    "S101", "S105", "S106", "S108",
    "N802", "N803", "N806",
    "PT011", "PT017", "PT018", "PT006", "PT012", "PT019",
    "SLF001",
]
# Connector contract tests intentionally use insecure hashing.
"tests/connectors/**" = ["S101", "S105", "S106", "S324"]
# Benchmark suite has measurement loops that look stylistically loud.
"tests/benchmark/**" = ["S101", "S105", "S106", "N802", "N806", "PT011"]
# Intentional design / math-notation exceptions (no removal trigger;
# the carve-out itself is the right behaviour):
# × (multiplication sign) is intentional math notation in the FPE
# docstring. Narrow to RUF002 so any other ambiguous-unicode
# regression still trips CI.
"src/decoy_engine/transforms/fpe.py" = ["RUF002"]
# Same character in a test comment ("2 cities × 2 statuses = 4 buckets")
# explaining a balanced-categoricals fixture; ASCII would obscure the
# product semantics.
"tests/unit/test_storm_reid_risk.py" = ["RUF003"]
# Empty-hook base classes intentionally swallow their body for
# subclasses to override.
"src/decoy_engine/internal/base.py" = ["B027"]
# Late-import-to-break-cycle pattern, documented in the module header.
"src/decoy_engine/internal/validator.py" = ["E402"]
"src/decoy_engine/sdk.py" = ["E402"]

# Legacy modules scheduled for V2.1 hard deletion (per the V2 sprint
# plan + v2-roadmap Phase 1 Sprint 5). Each entry deletes with its
# file. Adding a new entry here without a V2.1 tag is a review
# blocker.
# V2.1 delete: legacy Masker pipeline.
"src/decoy_engine/masker/processor.py" = ["E701"]
# V2.1 delete: legacy DataGenerator.
"src/decoy_engine/generators/generator.py" = ["F841"]
"src/decoy_engine/generators/relationships.py" = ["F841"]
# V2.1 delete: legacy connector base + fixed-width path; cloud
# connectors (s3/gcs/sftp) survive but the abstract base class
# pattern collapses when Masker dies.
"src/decoy_engine/connectors/base.py" = ["B027"]
"src/decoy_engine/connectors/fixed_width.py" = ["SIM113"]
# V2.1 delete: legacy large-file processor wired through Masker.
"src/decoy_engine/internal/large_file_processor.py" = ["SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.black]
target-version = ["py310"]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
(
    /__pycache__
  | /\.pytest_cache
  | /logs
)
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
# Per-subpackage strict-mode escalation lands alongside structural work
# in V2.0-A / V2.0-B / V2.0-C. The Sprint A modules below are at strict
# already; the legacy/pre-V2 modules carry bounded per-code allowlists
# that V2.0-B/C/V2.1 will shrink.

# V2.0-A Sprint A bar: modules created or refactored by the runner
# decomposition get the full --strict treatment. New code lands here
# from V2.0-B/C as those sprints touch their respective subpackages.
# Per-module override expanded into individual flags because mypy 2.x
# does not recognize `strict = true` as a per-module key (only as a
# global one); listing each strict-mode flag explicitly keeps the gate
# scoped to the listed modules.
[[tool.mypy.overrides]]
module = [
    # V2.0-A Sprint A modules (runner decomposition).
    "decoy_engine.graph.run_state",
    "decoy_engine.graph.memory_monitor",
    "decoy_engine.graph._fk_validators",
    "decoy_engine.graph.executor",
    "decoy_engine.graph.planner",
    "decoy_engine.graph.runner",
    # V2.0-B Sprint B modules (validator split + normalize_config).
    "decoy_engine.graph.normalize",
    "decoy_engine.graph.validators",
    "decoy_engine.graph.validators._shared",
    "decoy_engine.graph.validators.top_level",
    "decoy_engine.graph.validators.nodes",
    "decoy_engine.graph.validators.edges",
    "decoy_engine.graph.validators.cross_node",
    # V2.0-C Sprint C modules (public boundary + helpers split).
    "decoy_engine.errors",
    "decoy_engine.providers",
    "decoy_engine.internal.crypto",
    "decoy_engine.internal.fs",
    "decoy_engine.internal.faker_setup",
    # V2 Phase 3 Sprint D1a (Distribution Integrity: snapshot foundation).
    "decoy_engine.quality",
    "decoy_engine.quality.snapshot",
    # V2 Phase 3 Sprint D1b (Distribution Integrity: diagnostic structural checks).
    "decoy_engine.quality.diagnostic",
    # V2 Phase 3 Sprint D1c (Distribution Integrity: fidelity scoring).
    "decoy_engine.quality.fidelity",
    # V2 Phase 3 Sprint D1d (Distribution Integrity: QualityReport assembly).
    "decoy_engine.quality.report",
    # V2 Phase 3 Sprint D4 (Distribution Integrity: strategy-aware policy).
    "decoy_engine.quality.policy",
    # V2 Phase 3 Sprint D5b (Distribution Integrity: shape-only fidelity).
    "decoy_engine.quality.shape_fidelity",
    # V2 PERF.BASE.1 (per-strategy timing + per-node memory instrumentation).
    "decoy_engine.instrumentation",
    "decoy_engine.instrumentation.timing",
    # engine-v2 S1 (Profile module: dataclasses + hash + serialization +
    # DataFrame walker + STORM PII bridge). Spec:
    # docs/v2/sprints/engine-v2/sprint-01-profile-plan-and-fixtures.md
    # in decoy-platform.
    "decoy_engine.profile",
    "decoy_engine.profile._types",
    "decoy_engine.profile._hash",
    "decoy_engine.profile._serialize",
    "decoy_engine.profile._walk",
    "decoy_engine.profile._pii",
    # engine-v2 S1 fixture-suite slice (golden fixtures schema; build script
    # under scripts/ is intentionally not strict-mode-checked, the schema
    # under tests/fixtures/ is).
    "tests.fixtures.golden._manifest_schema",
    # engine-v2 S1 planner slice (Plan dataclass + compile_plan + 5 checks).
    "decoy_engine.plan",
    "decoy_engine.plan._types",
    "decoy_engine.plan._errors",
    "decoy_engine.plan._registry_stub",
    "decoy_engine.plan._checks",
    "decoy_engine.plan._compile",
    "decoy_engine.plan._serialize",
    # engine-v2 S2 (Relationship Coordinator + Namespace). Spec:
    # docs/v2/sprints/engine-v2/sprint-02-relationship-coordinator-and-namespace.md
    # in decoy-platform. Per best-practices §5.4 (resolution of S2 M4):
    # package-level entry alone is insufficient because submodules fall
    # back to the more permissive default unless listed explicitly.
    "decoy_engine.relationships",
    "decoy_engine.relationships._graph",
    "decoy_engine.relationships._namespace",
    # engine-v2 S3 (Determinism Layer). Spec:
    # docs/v2/sprints/engine-v2/sprint-03-determinism-layer.md in
    # decoy-platform. Per best-practices §5.4: enumerate submodules
    # explicitly so the strict gate covers the full surface.
    "decoy_engine.determinism",
    "decoy_engine.determinism._derive",
    "decoy_engine.determinism._hkdf",
    # engine-v2 S4 (Provider Registry + Faker Adapter). Spec:
    # docs/v2/sprints/engine-v2/sprint-04-provider-registry-and-faker-adapter.md
    # in decoy-platform. Per best-practices §5.4 + S4 spec §Done state.
    # Ships alongside V1's decoy_engine.providers per the B1 PO call;
    # V1 module stays as-is (not added to strict overrides; V2.1 deletes).
    "decoy_engine.providers_v2",
    "decoy_engine.providers_v2._adapter",
    "decoy_engine.providers_v2._errors",
    "decoy_engine.providers_v2._faker_adapter",
    "decoy_engine.providers_v2._real_registry",
    "decoy_engine.providers_v2._registry",
    # engine-v2 S5 (Pool Manager). Spec:
    # docs/v2/sprints/engine-v2/sprint-05-pool-manager.md in decoy-platform.
    # Per best-practices §5.4 + S5 spec §Done state.
    "decoy_engine.generation",
    "decoy_engine.generation.pool",
    "decoy_engine.generation.pool._builder",
    "decoy_engine.generation.pool._cache",
    "decoy_engine.generation.pool._canonicalize",
    "decoy_engine.generation.pool._cardinality",
    "decoy_engine.generation.pool._errors",
    "decoy_engine.generation.pool._events",
    "decoy_engine.generation.pool._pool_adapter",
    "decoy_engine.generation.pool._sampler",
    "decoy_engine.generation.pool._validate",
    "decoy_engine.generation.pool._value_pool",
]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
# Third-party libs without type stubs. Listed individually so a new
# missing-stubs surface trips review instead of silently passing.
module = [
    "duckdb",
    "duckdb.*",
    "faker",
    "faker.*",
    "pandas",
    "pandas.*",
    "polars",
    "polars.*",
    "psutil",
    "psutil.*",
    "pyarrow",
    "pyarrow.*",
    "yaml",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Bounded shrink-only allowlist for pre-V2 type debt.
#
# Replaces an earlier blanket `ignore_errors = true` per module, which let
# arbitrary new error categories slip in silently. Now each legacy module
# enumerates the specific error codes that fire today; any code that is
# NOT on the list still trips CI for that module. Removing a code from a
# list is allowed (it tightens the gate); adding one requires a comment
# explaining the new debt category and which sprint will close it.
#
# Each module is also tagged with its scheduled deletion or refactor
# sprint per the V2 sprint plan; V2.1 entries vanish with the files,
# V2.0-B/C entries shrink as those sprints land.
# ---------------------------------------------------------------------------

# masker.masker — V2.1 hard delete (legacy IOHandler-bound Masker).
[[tool.mypy.overrides]]
module = ["decoy_engine.masker.masker"]
disable_error_code = ["attr-defined"]

# generators.* — V2.1 hard delete (legacy DataGenerator).
[[tool.mypy.overrides]]
module = ["decoy_engine.generators.generator"]
disable_error_code = ["var-annotated"]

[[tool.mypy.overrides]]
module = ["decoy_engine.generators.relationships"]
disable_error_code = ["call-arg"]

# generators.columns — V2.1 hard delete. `index` debt surfaced by
# V2.0-C tightening deterministic_hash to return str | None; the
# callsite filters nulls upstream so the slice is safe.
[[tool.mypy.overrides]]
module = ["decoy_engine.generators.columns"]
disable_error_code = ["index"]

# transforms.{hash,categorical,faker_based} — V2.1 candidates for the
# legacy V1 Masker stack. `index` / `return-value` debt is the same
# str|None pattern surfaced by the V2.0-C deterministic_hash tightening;
# the V2.0-D transform-pipeline refactor clears them.
[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.hash"]
disable_error_code = ["index"]

[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.categorical"]
disable_error_code = ["return-value"]

[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.faker_based"]
disable_error_code = ["index"]

# internal.* type-debt allowlist. V2.0-C split internal/helpers.py into
# crypto/fs/faker_setup (now strict-gated). What remains in internal/
# is the V1 legacy stack that V2.1 hard-deletes.

# V1 legacy IOHandler base class. V2.1 delete with the Masker stack.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.base"]
disable_error_code = ["import-untyped"]

# V1 legacy Masker large-file path. V2.1 delete.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.large_file_processor"]
disable_error_code = ["assignment"]

# V1 legacy logging wrapper. V2.0-D / V2.1 audits replacement with the
# context.Logger Protocol everywhere.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.logging"]
disable_error_code = ["assignment"]

# V1 legacy MaskerConfigValidator + GeneratorConfigValidator. V2.1
# delete; the V2 graph validator stack (decoy_engine.graph.validators)
# is the replacement.
[[tool.mypy.overrides]]
module = ["decoy_engine.internal.validator"]
disable_error_code = ["attr-defined", "index"]

# connectors.* — V1.5 DB-connector cleanup + V2.0-C boundary; for now
# every connector enumerates its own debt categories independently so the
# V1.5 sweep can shrink each list one connector at a time.
[[tool.mypy.overrides]]
module = ["decoy_engine.connectors"]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.csv_connector"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.database"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.factory"]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.fixed_width"]
disable_error_code = ["arg-type", "no-redef", "return-value", "var-annotated"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.gcs"]
disable_error_code = ["attr-defined", "import-untyped"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.s3"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["decoy_engine.connectors.sftp"]
disable_error_code = ["attr-defined", "call-arg", "import-untyped"]

# transforms.registry — V2.0-B validator-split sprint refactors the
# strategy registry; abstract + var-annotated debt clears with it.
[[tool.mypy.overrides]]
module = ["decoy_engine.transforms.registry"]
disable_error_code = ["abstract", "assignment", "attr-defined", "var-annotated"]

[tool.coverage.run]
source = ["src/decoy_engine"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Coverage is not gated as part of V2.0-prep. The configuration exists so
# `pytest --cov` produces useful output for V2.0-A's per-module unit-test
# work. A floor lands once V2.0-C closes and the test surface stabilizes.
fail_under = 0
